Fix size - committed wrong size

--- a/www/rsc/css/additional.css
+++ b/www/rsc/css/additional.css
@@ -4,7 +4,7 @@ body{
 }
 
 .font-large{
-	font-size: 16pt;
+	font-size: 14pt;
 }
 
 .label-md {
